--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "app",
-    "slug": "app",
+    "name": "Aeasy",
+    "slug": "Aeasy",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -9,7 +9,11 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#ffffff",
+      "packegerOpts":{
+        "config": "metro.config.js",
+        "sourceExts": ["js", "jsx", "ts", "tsx", "svg"]
+      }
     },
     "assetBundlePatterns": [
       "**/*"
