--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Aeasy",
+  "name": "app",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -16,11 +16,13 @@
     "@react-navigation/stack": "^6.3.16",
     "expo": "^48.0.17",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.22.0",
     "react": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-native": "0.71.8",
     "react-native-permissions": "^3.8.0",
-    "react-native-safe-area-context": "^4.5.3",
-    "react-native-screens": "^3.20.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-svg": "^13.4.0",
     "react-native-swiper": "^1.6.0",
     "styled-components": "^5.3.10"
